--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       ⚠️ A liberdade não se perde de uma vez. Se abandona pouco a pouco.
     </div>
 
-    <a href="#" class="cta">Siga nossas redes sociais para acompanhar o Instituto Líderes do Amanhã.</a>
+    <a href="https://www.lideresdoamanha.org.br" class="cta" target="_blank">Siga nossas redes sociais para acompanhar o Instituto Líderes do Amanhã.</a>
   </section>
   <footer>
     Projeto independente inspirado em <em>A Revolta de Atlas</em>. Nenhuma liberdade foi ferida nesse processo.
